[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menus/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.376471 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -264.0
margin_top = -151.0
margin_right = 264.0
margin_bottom = 151.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -113.5
margin_right = 96.0
margin_bottom = 113.5

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 192.0
margin_bottom = 65.0
text = "


PAUSED"
align = 1
valign = 1

[node name="ContinueButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 69.0
margin_right = 192.0
margin_bottom = 89.0
text = "Continue"

[node name="OptionsButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 93.0
margin_right = 192.0
margin_bottom = 113.0
text = "Options"

[node name="MainMenuButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 117.0
margin_right = 192.0
margin_bottom = 137.0
text = "Return to Main Menu"

[node name="ExitGameButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 141.0
margin_right = 192.0
margin_bottom = 161.0
text = "Exit Game"

[connection signal="pressed" from="Panel/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ExitGameButton" to="." method="_on_ExitGameButton_pressed"]
